[package]
authors = ["Hayato Ito <hayato@google.com>"]
name = "icfp2006"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
loggerv = "0.7"
regex = "1.3"
structopt = "0.3"
lazy_static = "1.4.0"
serde_sexpr = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.3"
anyhow = "1.0"
